*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@327 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/map.css
+++ b/WebContent/map.css
@@ -182,3 +182,26 @@ td.map-icon-size-2:hover {
 td.map-icon-size-2-off:hover {
 	background-position: 0px -24px; }		
 	
+td.map-zoom-slider-bg {
+	vertical-align: top;
+	width: 80px;
+	height: 24px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(map-zoom-slider-bg.png); }	
+	
+div.map-zoom-slider-bg {
+	width: 80px;
+	height: 24px;
+	position: absolute; }
+	
+div.map-zoom-slider-knob {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	cursor: pointer;
+	width: 13px;
+	height: 24px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(map-zoom-slider-knob.png); }	
