*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@337 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-table.css
+++ b/WebContent/search-table.css
@@ -73,7 +73,7 @@ div.grid-tooltip {
     visibility: hidden; 
     position: absolute; 
     z-index: 1; 
-    width: 240px;
+    /*width: 0px;*/
     color: White; }
     
 div.grid-tooltip div {
