--- a/WebContent/map.css
+++ b/WebContent/map.css
@@ -1,4 +1,7 @@
 div.map-control {
+	margin-left: auto;
+	margin-right: auto;
+	border: 1px solid #4C5966;
 	overflow: visible; }
 
 table.map-tools {
@@ -288,3 +291,19 @@ td.map-bubble-33 {
 	background-repeat: no-repeat;
 	background-image: url(bubble-33.png); }	
 	
+div.map-scale-indicator-container {
+	position: absolute;
+	padding: 5px;
+	bottom: 5px;
+	left: 5px; }
+	
+div.map-scale-indicator-text {
+	opacity: 0.5;
+	margin-bottom: 2px;
+	color: Black; }
+	
+div.map-scale-indicator-bar {
+	opacity: 0.5;
+	background-color: Black;
+	overflow: hidden;
+	height: 5px; }	
