*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@352 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -129,6 +129,12 @@ table.tooltip-class tr {
 	padding-right: 10px;
 }
 
+div.detailTab {
+	padding-top: 5px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
 /* map */
 /*
 div.map-tools-top {
