--- a/WebContent/map.css
+++ b/WebContent/map.css
@@ -307,3 +307,28 @@ div.map-scale-indicator-bar {
 	background-color: Black;
 	overflow: hidden;
 	height: 5px; }	
+
+div.minimap-control {
+	border-left: 1px solid #4C5966;
+	border-top: 1px solid #4C5966;
+	width: 100px;
+	height: 100px;
+	right: 0px;
+	bottom: 0px;
+	position: absolute;
+	overflow: visible; }
+
+div.minimap-frame {
+	width: 100px;
+	height: 100px;
+	position: absolute; }
+	
+div.minimap-toggle {
+	background-color: Black;
+	opacity: 0.5;
+	cursor: pointer;
+	width: 10px;
+	height: 10px;
+	right: 0px;
+	bottom: 0px;
+	position: absolute; }
