*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@366 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/menu.css
+++ b/WebContent/menu.css
@@ -13,13 +13,13 @@ div.menu-popup-item-main {
 
 div.menu-popup-item-main:hover {
 	background-color: #F1E7C8;
+	/*
 	-background-color: #571B1D;
-	-color: White; }
+	-color: White; */}
 
 div.menu-popup-submenu-frame {
 	z-index: 1;	
 	top: -7px;
-	-left: 200px;
 	left: 290px;
 	position: relative;
 	display: none; }
