*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@371 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/map.css
+++ b/WebContent/map.css
@@ -314,7 +314,7 @@ div.minimap-control-nw {
 	left: 0px;
 	top: 0px;
 	position: absolute;
-	overflow: visible; }
+	overflow: hidden; }
 	
 div.minimap-control-ne {
 	border-left: 1px solid #4C5966;
@@ -322,7 +322,7 @@ div.minimap-control-ne {
 	right: 0px;
 	top: 0px;
 	position: absolute;
-	overflow: visible; }
+	overflow: hidden; }
 	
 div.minimap-control-se {
 	border-top: 1px solid #4C5966;
@@ -330,7 +330,7 @@ div.minimap-control-se {
 	right: 0px;
 	bottom: 0px;
 	position: absolute;
-	overflow: visible; }
+	overflow: hidden; }
 	
 div.minimap-control-sw {
 	border-right: 1px solid #4C5966;
@@ -338,7 +338,7 @@ div.minimap-control-sw {
 	left: 0px;
 	bottom: 0px;
 	position: absolute;
-	overflow: visible; }
+	overflow: hidden; }
 	
 div.minimap-frame {
 	position: absolute; }
