*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@380 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -135,6 +135,35 @@ div.detailTab {
 	padding-right: 5px;
 }
 
+table.legend-table-main {
+	padding-left: 10px;
+}
+
+table.legend-table-detail {
+	border-collapse: collapse;
+	padding-left: 5px;
+}
+
+td.legend-table-detail-col1 {
+	text-align: center;
+	padding-top: 5px;
+}
+
+td.legend-table-detail-col2 {
+	padding-left: 10px;
+	text-align: left;
+	padding-top: 3px;
+}
+
+div.map-legend-div {
+	padding-right: 10px;
+	width: 150px; 
+	background: #728fad;
+	vertical-align: top;
+	border: 1px solid #555555;
+}
+
+
 /* map */
 /*
 div.map-tools-top {
