*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@401 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-query.css
+++ b/WebContent/search-query.css
@@ -134,6 +134,21 @@ td.query-builder-range-month-selected {
 	cursor: pointer;
 	text-align: center; }
 	
+div.query-builder-list-popup-container {
+	position: relative;
+	width: 0px;
+	height: 0px; }
+	
+div.query-builder-list-popup {
+	position: absolute;
+	border: 1px solid Black;
+	top: -100px;
+	left: 290px;
+	width: 200px;
+	height: 200px;
+	background-color: White;
+	overflow: scroll; }
+
 td.query-builder-list {
 	width: 220px; }
 
