*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@407 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -156,13 +156,18 @@ td.legend-table-detail-col2 {
 }
 
 div.map-legend-div {
-	padding-right: 10px;
-	width: 150px; 
-	background: #728fad;
+	padding-left: 10px;
 	vertical-align: top;
-	border: 1px solid #555555;
 }
 
+input.map-legend-refresh {
+	margin-top: 10px;
+	margin-left: 10px;
+}
+
+table.legend-table-layers {
+	padding-left: 10px;
+}
 
 /* map */
 /*
