--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -1,7 +1,7 @@
 /* general */
 
 body {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, Bitstream Vera Sans, Sans, sans-serif;
 	background: #F1E7C8;
 	font-size: 8pt;
 	margin: 0px;
