*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@433 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -156,8 +156,10 @@ td.legend-table-detail-col2 {
 }
 
 div.map-legend-div {
+	padding-top: 10px;
 	padding-left: 10px;
 	vertical-align: top;
+	
 }
 
 input.map-legend-refresh {
