--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -135,3 +135,38 @@ table.legend-table-layers {
 
 
 
+div.gallery-back-button {
+/*	position: absolute; 
+	top: 290px; 
+	left: 12px; */
+	cursor: pointer;
+	width: 24px;
+	height: 24px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(map-icon-back.png); 
+}
+
+div.gallery-back-button:hover {
+	background-position: 0px -24px; 
+}
+
+div.gallery-forward-button {
+	cursor: pointer;
+	width: 24px;
+	height: 24px;
+	overflow: hidden;
+	background-repeat: no-repeat;
+	background-image: url(map-icon-forward.png); }
+
+div.gallery-forward-button:hover {
+	background-position: 0px -24px; }
+
+table.gallery-table-thumbnails {
+	border-collapse: collapse;
+	margin-bottom: 15px;
+}
+
+table.gallery-table-thumbnails tr {
+	border-bottom: 2px solid #CF5435;
+}
