*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@498 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/gallery.css
+++ b/WebContent/gallery.css
@@ -36,6 +36,10 @@ table.gallery-table tr {
 	border-bottom: 2px solid #CF5435;
 }
 
+table.gallery-table td {
+	text-align: center;
+}
+
 table.gallery-table-thumbnails td {
 	font-family: Arial, Helvetica, Bitstream Vera Sans, Sans, sans-serif;
 	font-size: 8pt;
