*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@504 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -133,3 +133,21 @@ table.legend-table-layers {
 	padding-left: 10px;
 }
 
+table.basic-stat-tab {
+	border-collapse: collapse;
+	border: 2px solid #F1E7C8;
+}
+
+table.basic-stat-tab tr {
+	border-bottom: 2px solid #F1E7C8;
+}
+
+table.basic-stat-tab th {
+	border-left: 2px solid #F1E7C8;
+	width: 150px;
+}
+
+table.basic-stat-tab td {
+	border-left: 2px solid #F1E7C8;
+	text-align: center;
+}
