*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@525 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/estimates.css
+++ b/WebContent/estimates.css
@@ -10,3 +10,12 @@ div.estimates-table table.simple-table td.simple-table-row-label,
 div.estimates-table table.simple-table td.simple-table-col-label {
 	background-color: #F1E7C8;
 	text-align: left; }
+
+div.african-region-list td.checkbox-list-label-0,
+div.american-region-list td.checkbox-list-label-0 {
+	padding-left: 5px;
+	font-weight: bold; }
+
+div.african-region-list table.checkbox-list-table-1,
+div.american-region-list table.checkbox-list-table-1 {
+	margin-left: 10px; }
