--- a/WebContent/estimates.css
+++ b/WebContent/estimates.css
@@ -19,23 +19,37 @@ div.estimates-table table.simple-table td.simple-table-col-label {
 	background-color: #F1E7C8;
 	text-align: left; }
 
+/***********************************
+* import regions
+***********************************/
+
+div.import-region-list table.checkbox-list-table-0 {
+	width: 100%; }
+	
+div.import-region-list td.checkbox-list-checkbox-0 {
+	padding-left: 5px; }
+
+div.import-region-list td.checkbox-list-label-0 {
+	width: 100%; }
+
 div.import-region-list td.checkbox-list-label-0 {
 	font-weight: bold; }
 
-div.import-region-list td.checkbox-list-label-0:hover {
-	background-color: #EEEEEE; }
+div.import-region-list tr.checkbox-list-item-0-active,
+div.import-region-list tr.checkbox-list-item-1-active {
+	background-color: #F1E7C8; }
 
-div.import-region-list div.checkbox-list-popup-cont {
-	width: 0px;
-	height: 0px;
+div.import-region-list div.checkbox-list-popup {
+	height: 300px;
+	width: 400px;
+	border: 1px solid #571B1D;
+	background-color: White;
+	background-position: right top;
+	background-repeat: no-repeat;
+	left: 230px;
 	position: absolute; }
 	
-div.import-region-list div.checkbox-list-popup {
-	width: 400px;
-	border: 1px solid Black;
-	background-color: White;
-	left: 200px;
-	position: relative; }
+	
 
 div.event-line-graph-container {
 	-background-color: #EEEEEE; }
