--- a/WebContent/search-table.css
+++ b/WebContent/search-table.css
@@ -84,3 +84,18 @@ div.grid-tooltip div {
 	top: -7px;
 	left: -7px; }
 	
+td.td-table-links {
+	background-color: #622424;
+}
+
+td.td-table-links:hover {
+	background-color: #CA4223;
+}
+
+td.td-table-links-td-active {
+	background-color: #CA4223;
+}
+
+td.td-table-links-no-hover	{
+	background-color: #622424;
+}
