*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@564 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/estimates.css
+++ b/WebContent/estimates.css
@@ -40,6 +40,7 @@ div.import-region-list tr.checkbox-list-item-1-active {
 	background-color: #F1E7C8; }
 
 div.import-region-list div.checkbox-list-popup {
+	z-index: 1;
 	height: 300px;
 	width: 400px;
 	border: 1px solid #571B1D;
@@ -48,6 +49,10 @@ div.import-region-list div.checkbox-list-popup {
 	background-repeat: no-repeat;
 	left: 230px;
 	position: absolute; }
+	
+/***********************************
+* timeline
+***********************************/	
 	
 div.event-line-left-selector {
 	cursor: move; }
