--- a/WebContent/admin/main.css
+++ b/WebContent/admin/main.css
@@ -5,3 +5,29 @@ body, input, textarea, select {
 body {
 	margin: 0px;
 	padding: 0px; }
+	
+/**********************************
+* grid
+***********************************/
+
+table.grid {
+	border-collapse: collapse; }
+
+table.grid td, 
+table.grid th {
+	text-align: left;
+	border-top: 1px solid #CCCCCC;
+	border-bottom: 1px solid #CCCCCC;
+	padding: 3px 10px 3px 3px; }
+	
+/**********************************
+* pager
+***********************************/
+	
+table.pager {
+	border-collapse: collapse; }
+	
+table.pager td {
+	border: 1px solid #CCCCCC;
+	padding: 3px 5px 3px 5px; }
+	
