*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@624 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/admin/main.css
+++ b/WebContent/admin/main.css
@@ -31,3 +31,17 @@ table.pager td {
 	border: 1px solid #CCCCCC;
 	padding: 3px 5px 3px 5px; }
 	
+table.pager td.pager-page,
+table.pager td.pager-previous-enabled,
+table.pager td.pager-next-enabled {
+	cursor: pointer; }
+
+table.pager td.pager-page-current {
+	background-color: #CCCCCC;
+	cursor: default; }
+
+table.pager td.pager-page:hover,
+table.pager td.pager-previous-enabled:hover,
+table.pager td.pager-next-enabled:hover {
+	background-color: #EEEEEE; }
+	
