*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@631 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/admin/main.css
+++ b/WebContent/admin/main.css
@@ -19,7 +19,13 @@ table.grid th {
 	border-top: 1px solid #CCCCCC;
 	border-bottom: 1px solid #CCCCCC;
 	padding: 3px 10px 3px 3px; }
-	
+
+table.grid td {
+	cursor: pointer; }
+
+table.grid tr.focused td {
+	background-color: #EEEEEE; }
+
 /**********************************
 * pager
 ***********************************/
@@ -30,6 +36,9 @@ table.pager {
 table.pager td {
 	border: 1px solid #CCCCCC;
 	padding: 3px 5px 3px 5px; }
+	
+table.pager td.pager-counter {
+	padding-right: 10px; }
 	
 table.pager td.pager-page,
 table.pager td.pager-previous-enabled,
