--- a/WebContent/gallery.css
+++ b/WebContent/gallery.css
@@ -44,6 +44,11 @@ table.gallery-table-thumbnails td {
 	font-family: Arial, Helvetica, Bitstream Vera Sans, Sans, sans-serif;
 	font-size: 8pt;
 	text-align: center;
+	width: 200px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	vertical-align: top;
+	
 }
 
 table.gallery-info-table td {
