*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@637 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-query.css
+++ b/WebContent/search-query.css
@@ -184,7 +184,7 @@ td.quer-builder-list-item-2 {
 	}	
 
 td.query-builder-list-item-with-children {
-	font-weight: bold; }
+	font-weight: normal; }
 	
 div.query-builder-list-item-expanded {
 	background-image: url(icon-arrow-down.png);
