*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@647 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/menu.css
+++ b/WebContent/menu.css
@@ -29,6 +29,7 @@ div.menu-popup-submenu {
 	border: 1px solid #571B1D; }
 
 div.menu-popup-submenu-item {
+	white-space: nowrap;
 	color: Black !important;
 	cursor: pointer;
 	background-color: White;
