--- a/WebContent/main.css
+++ b/WebContent/main.css
@@ -30,16 +30,21 @@ div.header {
 	background-position: left -3px;
 	background-image: url(header-decoration.png); }
 
-div.header-path {
+div.header-links {
 	font-weight: bold;
-	padding-left: 10px;
-	padding-top: 5px;
-	padding-bottom: 5px;
+	padding-left: 5px;
+	padding-top: 3px;
+	padding-bottom: 3px;
 	color: White;
 	background-color: #CA4223; }
+	
+div.header-link {
+	padding: 2px 5px 2px 5px; }
 
-div.header-path a {
+div.header-link-active {
+	padding: 2px 5px 2px 5px;
+	background-color: #571B1D; }
+
+div.header-link a,
+div.header-link-active a {
 	color: White; }
-
-div.header-path a:hover {
-	text-decoration: underline; 
