*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@652 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -20,13 +20,12 @@ td.main-panel {
 
 div.message-bar {
 	color: White;
-	margin-bottom: 5px;
+	margin-bottom: 10px;
 	padding-top: 5px;
 	padding-bottom: 5px;
 	padding-left: 5px;
 	padding-right: 5px;
-	background-color: #E2873B; 
-	border-bottom: 2px solid #F5F0D3; }
+	background-color: #CF5435; }
 	
 td.message-bar-button {
 	padding-left: 10px; }
