*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@655 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/estimates.css
+++ b/WebContent/estimates.css
@@ -103,4 +103,27 @@ div.event-line-mark-pressed {
 	background-image: url(../../event-line-mark-pressed.png);
 	background-repeat: no-repeat; }
 	
-	
+/***********************************
+* event line
+***********************************/
+
+table.event-line-event-table {
+	margin-bottom: 20px; 
+	margin-left: 70px; }
+
+td.event-line-event-space {
+	height: 5px; }
+
+td.event-line-event-table-label {
+	color: White;
+	text-align: center;
+	background-color: #666666;
+	width: 20px;
+	height: 20px; }
+
+td.event-line-event-table-x {
+	font-weight: bold;
+	padding-left: 10px; }
+
+td.event-line-event-table-text {
+	padding-left: 10px; }
