*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@658 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/estimates.css
+++ b/WebContent/estimates.css
@@ -121,6 +121,7 @@ td.event-line-event-space {
 	height: 5px; }
 
 td.event-line-event-table-label {
+	cursor: pointer;
 	color: White;
 	text-align: center;
 	background-color: #571B1D;
@@ -145,3 +146,25 @@ table.event-line-event-label td {
 
 table.event-line-event-label-selected td {
 	background-color: #CA4223; }
+	
+table.event-line-legend {
+	margin-left: 70px;
+	margin-bottom: 15px; }
+
+td.event-line-legend-sample {
+	padding-right: 5px; }
+
+td.event-line-legend-sample div {
+	border: 1px solid Black;
+	overflow: hidden;
+	width: 12px;
+	height: 12px; }
+	
+td.event-line-legend-name {
+	}
+
+td.event-line-legend-value {
+	padding-right: 5px; }
+	
+div.event-line-events-title {
+	display: none; }
