*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@659 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/estimates.css
+++ b/WebContent/estimates.css
@@ -168,3 +168,15 @@ td.event-line-legend-value {
 	
 div.event-line-events-title {
 	display: none; }
+	
+.color-timeline-exported {
+	background-color: #F1E7C8; }
+	
+.color-timeline-exported-event {
+	background-color: #CA4223; }
+
+.color-timeline-imported {
+	background-color: #E7D59C; }
+	
+.color-timeline-imported-event {
+	background-color: #571B1D; }
