*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@660 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/search-table.css
+++ b/WebContent/search-table.css
@@ -22,14 +22,17 @@ table.grid th a {
 	
 tr.grid-row-even {
 	cursor: pointer;
-	border-bottom: 2px solid #F1E7C8; }
+	border-bottom: 2px solid #F1E7C8; 
+}
 
 tr.grid-row-odd {
 	cursor: pointer;
 	border-bottom: 2px solid #F1E7C8; }
 
 tr.grid-row-odd td, tr.grid-row-even td { 
-	padding: 5px; }
+	padding: 5px; 
+	vertical-align: top;
+}
 		
 tr.grid-row-last {
 	cursor: pointer;
