--- a/WebContent/search.css
+++ b/WebContent/search.css
@@ -185,3 +185,26 @@ table.multiline-attr-table td {
 	padding: 0px !important;
 	white-space: nowrap;
 }
+
+.timeline-color {
+	background: #F1E7C8;
+}
+
+table.event-line-legend {
+	margin-left: 70px;
+	margin-bottom: 15px; }
+
+td.event-line-legend-sample {
+	padding-right: 5px; }
+
+td.event-line-legend-sample div {
+	border: 1px solid Black;
+	overflow: hidden;
+	width: 12px;
+	height: 12px; }
+	
+td.event-line-legend-name {
+	}
+
+td.event-line-legend-value {
+	padding-right: 5px; }
